k8s/Deployment_templete.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: motd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: damsdock/motd_ds:GIT_SHA
