k8s/deployment_canary.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentcanary
  labels:
    app: motd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: damsdock/motd_ds:latest
