k8s/pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: motd
  labels:
    app: motd
spec:
  containers:
  - name: motd
    image: damsdock/motd_ds:latest
